<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
>

    <include layout="@layout/navigation_bar" />
    <include layout="@layout/sort_bar" />

    <ListView
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#5a47025c"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent">
    </ListView>

    <include layout="@layout/music_bar" />

</android.support.constraint.ConstraintLayout>