...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="36dp"
            android:autoSizeTextType="uniform"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="Last Played:"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"

            app:layout_constraintBottom_toTopOf="@+id/time"
            app:layout_constraintLeft_toLeftOf="parent"
...
